- Updating build script to leave build folder intact
git-svn-id: http://developer.longtailvideo.com/svn/trunk@928 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/build.xml
+++ b/html5/build.xml
@@ -2,7 +2,8 @@
 <project name="JW Player for HTML5" default="build-release" basedir=".">
 
     <target name="clean" depends="load.properties">
-        <delete dir="${build.dir}" quiet="true"/>
+        <delete file="${basedir}/${build.dir}/jquery.${product.name}-${version.number}.js" quiet="true"/>
+        <delete file="${basedir}/${build.dir}/jquery.${product.name}-${version.number}.min.js" quiet="true"/>
     </target>
 	
     <target name="load.properties">
