--- a/fl5/doc/developers/Makefile
+++ b/fl5/doc/developers/Makefile
@@ -66,7 +66,7 @@ qthelp:
 	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/JWPlayerforHTML5.qhc"
 
 latex:
-	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) $(BUILDDIR)/latex
+	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) $(BUILDDIR)/
 	@echo
 	@echo "Build finished; the LaTeX files are in $(BUILDDIR)/latex."
 	@echo "Run \`make all-pdf' or \`make all-ps' in that directory to" \
